--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ __pycache__/
 *.so
 
 
-
+desc/
 ckpts/
 _new/
 finetune_new/
@@ -20,6 +20,7 @@ csv_outputs/
 *.pth
 # Distribution / packaging
 output/
+outputs/
 .Python
 build/
 develop-eggs/
