--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,6 +1,6 @@
 data:
     lmdb_path: /home/sobhan/Documents/Code/MLLM/desc
-    lmdb_path_images: /mnt/fast/nobackup/scratch4weeks/sa04359/data/lmdb
+    lmdb_path_images: /home/sobhan/Documents/Code/LLaMA-Adapter/SQA-Lightning/src/sqa/data/lmdb
     max_length: 300
     labels: /home/sobhan/Documents/Code/MLLM/data/labels
 model:
@@ -8,7 +8,8 @@ model:
     transformer: /home/sobhan/Documents/Code/MLLM/MBart_trimmed
     resnet: /home/sobhan/Documents/Code/MLLM/ckpts/resnet18.pth
     embed_dim: 1024
-    sign_proj: True
+    sign_proj: False
+    alpha: 0.5
 training:
     wandb: disabled # online or disabled
     scale_embedding: False
