--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -8,12 +8,12 @@ model:
     transformer: /home/sobhan/Documents/Code/MLLM/MBart_trimmed
     resnet: /home/sobhan/Documents/Code/MLLM/ckpts/resnet18.pth
     embed_dim: 1024
-    sign_proj: False
+    sign_proj: True
     alpha: 0.5
 training:
     wandb: disabled # online or disabled
     scale_embedding: False
-    ckpt_path: /home/sobhan/Documents/Code/MLLM/ckpts/best-epoch=011-val_loss=2.142.ckpt
+    ckpt_path: /home/sobhan/Documents/Code/MLLM/ckpts/best-epoch=076-val_loss=0.950.ckpt
     ckpt_path_best: /mnt/fast/nobackup/scratch4weeks/sa04359/MMSLT/run_2024-12-10_17-56-53/best-epoch=076-val_loss=1.120.ckpt
 save:
     output: outputs/
