--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -8,12 +8,13 @@ model:
     transformer: /home/sobhan/Documents/Code/MLLM/MBart_trimmed
     resnet: /home/sobhan/Documents/Code/MLLM/ckpts/resnet18.pth
     dino: /home/sobhan/Documents/Code/PSP/tmp/tmp.pth
+    classifier: /home/sobhan/Documents/Code/models--distilbert-base-uncased/snapshots/12040accade4e8a0f71eabdb258fecc2e7e948be/
     embed_dim: 1024
-    sign_proj: True
+    sign_proj: False
 training:
     wandb: disabled # online or disabled
     scale_embedding: False
-    ckpt_path: /home/sobhan/Documents/Code/MLLM/outputs/run_2025-01-23_00-29-19/best-epoch=081-val_total_loss=0.964.ckpt
+    ckpt_path: /home/sobhan/Documents/Code/MLLM/outputs/run_2025-02-20_15-59-34/best-epoch=008-val_total_loss=2.155.ckpt
     ckpt_path_landa=0.5: /home/sobhan/Documents/Code/MLLM/outputs/run_2025-01-21_01-22-53/best-epoch=085-val_loss=0.000.ckpt
     ckpt_path_old: /home/sobhan/Documents/Code/MLLM/outputs/run_2024-12-29_18-57-45/best-epoch=010-val_loss=0.605.ckpt
     ckpt_path_shit_result_multi_stage: /home/sobhan/Documents/Code/MLLM/ckpts/best-epoch=089-val_loss=3.722-val_bleu=14.258.ckpt
