--- a/configs/csldaily-config.yaml
+++ b/configs/csldaily-config.yaml
@@ -14,6 +14,8 @@ training:
     wandb: disabled # online or disabled
     scale_embedding: False
     ckpt_path: /home/sobhan/Documents/Code/MLLM/outputs/run_2025-04-04_14-33-27_landa_desc_1.0_landa_hamer_1.0_warmup_0.05/best-epoch=001-val_total_loss=1.773.ckpt
+wandb:
+    project: test_safety
 save:
     output: outputs/
     csv: csv_outputs/
